added signup page to sidebar

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -44,6 +44,7 @@
     "search": "Search"
   },
   "error404": {
+    "comeBack": "Return to Home",
     "notFound": "Sorry, page not found!"
   },
   "gantt": {
